--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,7 @@ body{
   background-position: center;
   width: 100%;
   height: 370px;
+  
 }
 
 
@@ -135,3 +136,16 @@ backdrop-filter: blur(41.54999923706055px);
   border-radius: 16.782px;
   background: rgba(255, 255, 255, 0.20);
 }
+
+.balo{
+  background: linear-gradient(109deg, rgba(255, 255, 255, 0.60) -14.82%, rgba(0, 129, 255, 0.55) 99.98%);
+}
+
+/* 
+.local{
+  background-image:  url(./CasStydies/LocalCaregiver/Assets/Frame\ 1000009928.png);
+  background-position: center;
+  width: 100%;
+  background-size: contain;
+  background-repeat: no-repeat;
+} */
